# scc461-pso

./: Cargo.toml  README.md
examples/: adv.rs  basic.rs  multi.rs
src/: lib.rs  optimiser.rs  optimizer.rs
src/optimiser/: optimiser_config.rs  swarm.rs
src/optimiser/swarm/: particle.rs
src/optimizer/: optimizer_config.rs  swarm.rs
src/optimizer/swarm/: swarm_config.rs  swarm_elements.rs
tests/: integration-tests.rs
