[package]
name = "ps_optim"
version = "0.0.1"
authors = ["Kieran M <k.molloy@lancaster.com>"]
edition = "2018"
readme = "README.md"
description = "Small Generic Particle Swarm Optimiser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.7.3"

[dependencies]
